# patchtree

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  license  makefile  pyproject.toml  readme.md  readme.rst
doc/: conf.py  index.rst
doc/api/: index.rst
doc/dev/: diff.rst  index.rst  processor.rst
doc/user/: index.rst
patchtree/: __init__.py  cli.py  config.py  context.py  diff.py  patch.py  process.py
